--- a/01-social-links-profile-main/src/style.css
+++ b/01-social-links-profile-main/src/style.css
@@ -1,10 +1,13 @@
-/*! tailwindcss v4.1.16 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
+    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-700: oklch(50.5% 0.213 27.518);
     --color-gray-700: hsl(0, 0%, 20%);
     --color-gray-800: hsl(0, 0%, 12%);
     --color-gray-900: hsl(0, 0%, 8%);
@@ -16,7 +19,7 @@
     --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-normal: 400;
     --radius-2xl: 1rem;
-    --default-font-family: 'Inter', sans-serif;
+    --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-green: hsl(75, 94%, 57%);
   }
@@ -179,14 +182,8 @@
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
   }
-  .contents {
-    display: contents;
-  }
   .flex {
     display: flex;
-  }
-  .table {
-    display: table;
   }
   .size-28 {
     width: calc(var(--spacing) * 28);
@@ -203,6 +200,15 @@
   }
   .max-w-md {
     max-width: var(--container-md);
+  }
+  .min-w-96 {
+    min-width: calc(var(--spacing) * 96);
+  }
+  .min-w-\[300px\] {
+    min-width: 300px;
+  }
+  .min-w-\[400px\] {
+    min-width: 400px;
   }
   .flex-col {
     flex-direction: column;
@@ -242,12 +248,11 @@
   .text-green {
     color: var(--color-green);
   }
+  .text-red-700 {
+    color: var(--color-red-700);
+  }
   .text-white {
     color: var(--color-white);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@@ -271,16 +276,10 @@ span {
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
     }
   }
 }
